test/externalname-service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: prometheus-grafana.prometheus.svc.cluster.local
