test/externalname-service-loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-external
  namespace: prometheus
spec:
  type: ExternalName
  externalName: loki.loki-stack.svc.cluster.local
