test/externalname-service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: prometheus.prometheus.svc.cluster.local
