test/loki-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-loki
    namespace: loki-stack
    annotations: 
      nginx.ingress.kubernetes.io/rewrite-target: /$2
  spec:
    ingressClassName: nginx
    rules:
      - http:
          paths:
            - pathType: ImplementationSpecific
              path: /loki(/|$)(.*) 
              backend:
                service: 
                  name: loki-name-grafana
                  port:
                    number: 3000
